<resources>
    <string name="app_name">龙策</string>
    <string name="data_parsing_error">数据解析错误</string>
    <string name="net_connect_time_out">网络请求超时</string>
    <string name="string_hint">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="call">拨打</string>
    <string name="hint_write_external_storage">允许本软件读取文件\n请在系统设置->隐私->存储\n允许本软件读取文件</string>
    <string name="picture_illegal">未获取到图片，请检查并开启设置中应用的存储权限，且确保图片格式正确</string>
    <string name="no_permission_to_save_file">获取存储权限失败，请在设置->应用/权限管理->本应用中打开存储权限以便应用读写</string>

    <string name="string_version">版本号:</string>
    <string name="string_can_not_find_version_name">无法获取版本号信息</string> <!--启动和关于我们页-->
    <!--选择图片 begin-->
    <string name="take_photo">拍照</string>
    <string name="select_photo">从手机相册选择</string>
    <!--选择图片 end-->
    <!-- 启动页 -->

    <string name="string_find_new_version">发现新版本</string>
    <!-- 启动页 -->
    <!-- 登录页 begin-->
    <string name="login_string">登录</string>
    <string name="logout_string">退出登录</string>
    <string name="login_get_code">获取验证码</string>

    <string name="login_input_oa_account_hint">请输入OA账号</string>
    <!--<string name="login_input_code_hint">请输入OA密码</string>-->
    <string name="login_input_code_hint">请输入验证码</string>
    <string name="login_string_second">秒</string>

    <string name="login_toast_oa_null">OA账号不能为空</string>
    <string name="login_toast_code_null">验证码不能为空</string>
    <string name="login_toast_code_error">请输入正确的验证码</string>

    <string name="login_toast_user_error">用户信息异常</string>
    <!-- 登录页 end-->
    <!-- 我的 begin-->
    <string name="mine_title">我的</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_recommend">推荐</string>
    <string name="mine_feed_back">意见反馈</string>
    <string name="mine_setting">设置</string>
    <string name="mine_home">首页</string>

    <!--关于我们 begin-->
    <string name="about_us_function_intro">功能介绍</string>
    <string name="about_us_copyright">龙湖地产版权所有</string>
    <string name="index_statistics_title">数+</string>
    <string name="query_attendance">考勤查询</string>
    <!--关于我们 end-->
    <!--反馈意见 begin-->
    <string name="feed_back_title">反馈意见</string>
    <string name="feed_back_list">反馈列表</string>
    <!--反馈意见 end-->
    <!--推荐 begin-->
    <string name="recommend_your_code">您的推荐码</string>
    <!--推荐 end-->
    <!-- 我的 end-->

    <!--实习生角色 begin-->
    <string name="trainee_role_show_get_num">外展</string>
    <string name="trainee_role_expand_get_num">外拓</string>
    <string name="trainee_role_show_and_expand_call_num">外展外拓追电</string>
    <string name="trainee_role_call_get_num">外呼陌电</string>
    <string name="trainee_role_call_call_num">外呼追电</string>
    <!--实习生角色 end-->
    
    <string name="total">合计</string>
    <string name="off_duty">下班</string>
    <string name="on_duty">上班</string>
    <string name="name">姓名</string>
    <string name="position">地点</string>

    <!-- 渠道平台 begin-->

    <string name="channel_platform_title">渠道平台</string>
    <string name="channel_platform_student_client_list">实习生客户列表</string>
    <string name="channel_platform_broker_list">经纪人客户列表</string>
    <string name="channel_platform_team_campaign">团队战报</string>
    <string name="channel_platform_record_list">战绩榜</string>
    <string name="channel_platform_arrange_work">排班</string>
    <string name="channel_platform_client_list">客户列表</string>
    <!-- 渠道平台 end-->
    <!--客户列表 begin-->
    <string name="all">全部</string>
    <string name="first_level_client">一级</string>
    <string name="second_level_client">二级</string>
    <string name="subscribe_client">认购</string>
    <string name="client_conversion_rate">转化率</string>

    <string name="string_client">客户</string>
    <string name="string_trainee">实习生</string>
    <string name="string_consultant">置业顾问</string>


    <string name="input_search_content">输入查询信息</string>
    <!--客户列表 end-->

    <!--上岗统计 begin-->
    <string name="company">公司</string>
    <string name="project">项目</string>
    <string name="checkInPosition">考勤点</string>
    <string name="close">关闭</string>
    <string name="today_check_in_num">当天签到</string>
    <string name="month_avg_check_in_num">滚动30天日均</string>
    <string name="company_check_in_statistics">上岗统计(地区)</string>
    <string name="project_check_in_statistics">上岗统计(项目)</string>
    <string name="team_check_in_statistics">上岗统计(考勤点)</string>
    <!--上岗统计 end-->
    <!--客户列表搜索 begin-->
    <string name="client_list_title">客户列表</string>
    <string name="client_list_history_search">历史搜索</string>
    <string name="input_search_counselor">请输入置业顾问姓名</string>
    <string name="input_search_trainee">请输入实习生姓名</string>
    <string name="input_search_client">请输入客户姓名或者电话</string>
    <!--客户列表搜索 end-->
    <!--客户详情 begin-->
    <string name="client_detail_title">客户详情</string>
    <string name="client_follow">跟进</string>
    <string name="client_data">资料</string>
    <string name="customer_demand">客户需求</string>

    <!--客户详情 end-->
    <!--排班 begin-->
    <string name="arrange_title">排班</string>
    <!--排班 end-->

    <!--团队战报 begin-->
    <string name="first_ranking">第一名</string>
    <string name="second_ranking">第二名</string>
    <string name="third_ranking">第三名</string>
    <string name="headman_and_colon">组长：</string>
    <string name="rank_first_text">是状元，占领了封面</string>
    <string name="please_select_trainee_to_work">请选择上班人员</string>
    <string name="alternative_list">备选名单</string>
    <!--团队战报 end-->

    <string name="exceed_arrange_time_limit">已超过排班期限</string>
    <string name="temp_no_data">暂无数据</string>
</resources>
