<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_fa"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/name"
            android:textColor="@color/gray_9"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:gravity="center_vertical"
            android:text="@string/position"
            android:textColor="@color/gray_9"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/on_duty"
            android:textColor="@color/gray_9"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/off_duty"
            android:textColor="@color/gray_9"
            android:textSize="14sp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_query_attendance"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_query_attendance"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.v7.widget.LinearLayoutCompat>