<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f4"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/gray_fa"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:textColor="@color/gray_6"
            android:drawableRight="@mipmap/elv_arrow_item_down"
            android:drawablePadding="5dp"
            android:text="置业顾问"
            />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="28dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/client_list_edit_search_bg"
            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@mipmap/client_search_icon"
                android:layout_marginLeft="10dp"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:imeOptions="actionSearch"
                android:cursorVisible="true"
                android:textSize="15sp"
                android:textColor="@color/gray_3"
                android:hint="@string/input_search_counselor"
                android:textColorHint="@color/gray_d8"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/gray_6"
            android:textSize="15sp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            />

    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/view_divider"
        android:paddingTop="10dp"
        android:layout_below="@+id/common_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/divider_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_3"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:text="@string/client_list_history_search"
            android:layout_centerVertical="true"
            />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/img_delete"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <com.longfor.channelmanager.common.view.taglayout.TagFlowLayout
        android:id="@+id/tagFlowLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        />

</android.support.v7.widget.LinearLayoutCompat>